--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,8 +2,8 @@
 // ---------------------------------
 
 @import "vendor/normalize";
-// Swiper 7.4.1
-// @import "vendor/swiper";
+// Swiper 8.1.1
+@import "vendor/swiper";
 
 // Global
 // ---------------------------------
@@ -20,6 +20,7 @@
 
 @import "blocks/btn";
 @import "blocks/modal";
+@import "blocks/swiper-test";
 
 // ---------------------------------
 
