--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -20,7 +20,7 @@
 
 @import "blocks/btn";
 @import "blocks/modal";
-@import "blocks/swiper-test";
+@import "blocks/slider-mentor";
 
 // ---------------------------------
 
