--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -12,10 +12,33 @@ $color-transparent: rgba(255, 255, 255, 0);
 
 $color-neon-blue: #2c39f2;
 $color-torch-red: #ff1553;
+$color-dark-cerulean: #003d85;
+$color-venetian-red: #b80027;
+$color-sapphire: #102654;
+$color-sapphire-transparent-50: rgba(16, 38, 84, 0.5);
+$color-sapphire-transparent-89: rgba(16, 38, 84, 0.89);
+$color-egyptian-blue: #103aae;
+$color-whisper: #e8e8e8;
+$color-whisper-transparent-48: rgba(232, 232, 232, 0.48);
+$color-ghost-white: #f8f9fc;
+$color-torch-red: #ed0233;
+$color-spindle: #b6bdcc;
+$color-resolution-blue: #1c3374;
+$color-persian-blue: #2e35ac;
+$color-dark-gray: #afafaf;
+$color-light-slate-grey: #74819c;
+$color-black-russian: #030a1a;
 
 // Gradient
 
 $black-to-right: linear-gradient(90deg, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0) 75%);
+$dark-cerulean-to-venetian-red-main: conic-gradient(from 130.31deg at 16.03% 39.06%, #b80027 -46.69deg, #003d85 32.24deg, #b80027 313.31deg, #003d85 392.24deg);
+$dark-cerulean-to-venetian-red-round-button: linear-gradient(44.89deg, #003d85 25.38%, #b80027 74.89%);
+;
+$gradient-button: linear-gradient(97.05deg, #ed0233 17.6%, #003eb7 95.31%);
+$gradient-border: linear-gradient(142.51deg, #d10a42 0%, #00359f 100%);
+$gradient-text: linear-gradient(127.61deg, #d10a42 0%, #0041ca 45.58%);
+$shadow-feedback: 0 0 40px rgba(28, 51, 116, 0.2);
 
 // Typography
 // ---------------------------------
