--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -22,7 +22,9 @@
 
 @import "blocks/btn";
 @import "blocks/modal";
+@import "blocks/header-top-line";
 @import "blocks/main-screen";
+@import "blocks/main-nav";
 @import "blocks/slider-mentor";
 
 // ---------------------------------
