--- a/source/sass/global/header.scss
+++ b/source/sass/global/header.scss
@@ -1,51 +1,12 @@
 .header {
-  background-color: black;
-}
+  position: relative;
 
-.header__wrapper {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 30px 0 0;
+  background: $dark-cerulean-to-venetian-red-main;
 
   @include vp-1199 {
-    padding: 40px 0 25px;
+    background: $dark-cerulean-to-venetian-red-medium;
   }
   @include vp-767 {
-    padding: 20px 0 0;
-  }
-}
-
-.header__wrapper a {
-  flex-shrink: 0;
-  align-self: start;
-}
-
-.header__contacts {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-end;
-  align-items: center;
-}
-
-.header__contacts a {
-  flex-shrink: 0;
-  margin-left: 20px;
-
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 26px;
-  font-family: $ff-bebas;
-  color: $color-default-white;
-  letter-spacing: 0.03em;
-
-  @include vp-1199 {
-    font-size: 24px;
-    line-height: 24px;
-    letter-spacing: 0.02em;
-  }
-  @include vp-767 {
-    font-size: 20px;
-    line-height: 20px;
+    background: $dark-cerulean-to-venetian-red-mini;
   }
 }
