--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -33,6 +33,8 @@ $color-black-russian: #030a1a;
 
 $black-to-right: linear-gradient(90deg, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0) 75%);
 $dark-cerulean-to-venetian-red-main: conic-gradient(from 130.31deg at 16.03% 39.06%, #b80027 -46.69deg, #003d85 32.24deg, #b80027 313.31deg, #003d85 392.24deg);
+$dark-cerulean-to-venetian-red-medium: conic-gradient(from 139.4deg at 20.7% 35.74%, #b80027 -46.69deg, #003d85 32.24deg, #b80027 313.31deg, #003d85 392.24deg);
+$dark-cerulean-to-venetian-red-mini: conic-gradient(from 171.43deg at 35.31% 34.22%, #b80027 -46.69deg, #003d85 32.24deg, #b80027 313.31deg, #003d85 392.24deg);
 $dark-cerulean-to-venetian-red-round-button: linear-gradient(44.89deg, #003d85 25.38%, #b80027 74.89%);
 ;
 $gradient-button: linear-gradient(97.05deg, #ed0233 17.6%, #003eb7 95.31%);
