ADD: footer do not pixel perfect

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -16,6 +16,7 @@
 @import "global/container";
 @import "global/header";
 @import "global/logo";
+@import "global/footer";
 
 // Blocks
 // ---------------------------------
@@ -26,6 +27,8 @@
 @import "blocks/main-screen";
 @import "blocks/main-nav";
 @import "blocks/slider-mentor";
+@import "blocks/footer-nav";
+@import "blocks/social-link";
 
 // ---------------------------------
 
