--- a/source/sass/global/footer.scss
+++ b/source/sass/global/footer.scss
@@ -40,9 +40,6 @@
 .footer__social {
   flex-shrink: 0;
   align-self: flex-start;
-
-  @include vp-767 {
-  }
 }
 
 .footer__social ul {
@@ -60,6 +57,9 @@
 
   @include vp-1199 {
     margin-right: 20px;
+  }
+  @include vp-767 {
+    margin-right: 35px;
   }
 }
 
