ADD: section gym without video

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -26,6 +26,7 @@
 @import "blocks/header-top-line";
 @import "blocks/main-screen";
 @import "blocks/main-nav";
+@import "blocks/gym";
 @import "blocks/slider-mentor";
 @import "blocks/footer-nav";
 @import "blocks/social-link";
