--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -28,6 +28,7 @@ $color-persian-blue: #2e35ac;
 $color-dark-gray: #afafaf;
 $color-light-slate-grey: #74819c;
 $color-black-russian: #030a1a;
+$color-dark-cerulean-transparent-50: rgba(20, 54, 122, 0.5);
 
 // Gradient
 
