--- a/source/sass/blocks/main-screen.scss
+++ b/source/sass/blocks/main-screen.scss
@@ -1,5 +1,12 @@
 .main-screen {
   padding-bottom: 51px;
+
+  @include vp-1199 {
+    padding-bottom: 83px;
+  }
+  @include vp-767 {
+    padding-bottom: 51px;
+  }
 }
 
 .main-screen__wrapper {
