ADD: video player in section gym and centered tetle in section main-screen

--- a/source/sass/blocks/slider-mentor.scss
+++ b/source/sass/blocks/slider-mentor.scss
@@ -76,3 +76,8 @@
 .slider__button-prev::before {
   transform: rotate(135deg);
 }
+//Пример отображения знака рубля
+.swiper-slide span {
+  font-size: 50px;
+  font-family: $ff-rouble;
+}
