--- a/source/sass/blocks/main-screen.scss
+++ b/source/sass/blocks/main-screen.scss
@@ -15,7 +15,7 @@
   align-items: flex-end;
 
   @include vp-1199 {
-    justify-content: space-between;
+    justify-content: center;
   }
 }
 
@@ -38,8 +38,9 @@
   @include vp-767 {
     margin-right: 0;
     margin-bottom: 29px;
+    //grid-template-columns: minmax(120px, 1fr) repeat(2, 3fr);
 
-    grid-template-columns: minmax(120px, 1fr) repeat(2, 3fr);
+    grid-template-columns: 108px 91.5px 91.5px;
     grid-template-rows: 40px 81px minmax(51px, auto) 103px;
   }
 }
