ADD: section subscription start

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -14,6 +14,7 @@
 @import "global/reboot";
 @import "global/utils";
 @import "global/container";
+@import "global/title";
 @import "global/header";
 @import "global/logo";
 @import "global/footer";
@@ -28,6 +29,9 @@
 @import "blocks/main-nav";
 @import "blocks/gym";
 @import "blocks/slider-mentor";
+@import "blocks/subscription";
+@import "blocks/tabs";
+@import "blocks/card";
 @import "blocks/footer-nav";
 @import "blocks/social-link";
 
