--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -11,6 +11,8 @@
 
   transition: opacity $trans-default;
 
+  user-select: none;
+
   &--red {
     background-color: $color-torch-red;
   }
@@ -35,6 +37,26 @@
     @include vp-767 {
       padding: 19px 0;
     }
+  }
+
+  &--sapphire {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    padding: 27px 0 28px;
+
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 14px;
+    color: $color-sapphire;
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
+
+    background-color: transparent;
+    border: 2px solid $color-sapphire;
   }
 
   &:disabled {
