--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -12,12 +12,14 @@ $color-transparent: rgba(255, 255, 255, 0);
 
 $color-neon-blue: #2c39f2;
 $color-torch-red: #ff1553;
+$color-crimson: #d10a42;
 $color-dark-cerulean: #003d85;
 $color-venetian-red: #b80027;
 $color-sapphire: #102654;
 $color-sapphire-transparent-50: rgba(16, 38, 84, 0.5);
 $color-sapphire-transparent-89: rgba(16, 38, 84, 0.89);
 $color-egyptian-blue: #103aae;
+$color-chambray: #495a7d;
 $color-whisper: #e8e8e8;
 $color-whisper-transparent-48: rgba(232, 232, 232, 0.48);
 $color-ghost-white: #f8f9fc;
@@ -27,6 +29,7 @@ $color-resolution-blue: #1c3374;
 $color-persian-blue: #2e35ac;
 $color-dark-gray: #afafaf;
 $color-light-slate-grey: #74819c;
+$color-gray-transparent-20: rgba(120, 120, 120, 0.2);
 $color-black-russian: #030a1a;
 $color-dark-cerulean-transparent-50: rgba(20, 54, 122, 0.5);
 
