--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -46,7 +46,7 @@
     width: 100%;
     margin: 0;
     padding: 0;
-    padding: 27px 0 28px;
+    padding: 24px 0;
 
     font-weight: 700;
     font-size: 12px;
