--- a/source/sass/blocks/card.scss
+++ b/source/sass/blocks/card.scss
@@ -1,7 +1,15 @@
 .card {
-  display: flex;
+  display: none;
   justify-content: space-between;
   align-items: center;
+
+  @include vp-1199 {
+    flex-direction: column;
+  }
+
+  &--active {
+    display: flex;
+  }
 }
 
 .card__list {
@@ -12,22 +20,92 @@
 }
 
 .card__item {
-  padding: 68px 77px;
+  z-index: 3;
+
+  width: 33%;
+  max-width: 360px;
+  margin-right: 40px;
+  padding: 56px 10px 65px;
+  overflow: hidden;
 
   text-align: center;
 
   background-color: $color-default-white;
+
+  @include vp-1199 {
+    width: 100%;
+    min-width: 442px;
+    max-width: 873px;
+    margin-right: 0;
+    margin-bottom: 49px;
+  }
+  @include vp-767 {
+    min-width: 290px;
+    max-width: 737px;
+    margin-bottom: 37px;
+    padding: 51px 10px 54px;
+  }
+
+  &:last-child {
+    margin-right: 0;
+
+    @include vp-1199 {
+      margin-bottom: 0;
+    }
+  }
+
+  &:hover,
+  &:active,
+  &:focus {
+    padding: 49px 3px 58px;
+
+    border: 7px solid;
+    border-image-source: $gradient-border;
+    border-image-slice: 1;
+
+    @include vp-767 {
+      padding: 44px 3px 47px;
+    }
+  }
+
+  &:hover a,
+  &:active a,
+  &:focus a,
+  & a:hover,
+  & a:focus,
+  & a:active {
+    padding: 25px 0 25px;
+
+    color: $color-default-white;
+
+    background: $gradient-button;
+    border: 1px solid;
+    border-image-source: $gradient-button;
+    border-image-slice: 1;
+    outline: none;
+    opacity: 1;
+  }
 }
 
 .card__item h3 {
   margin: 0;
-  margin-bottom: 22px;
+  margin-bottom: 5px;
   padding: 0;
 
   font-weight: 700;
   font-size: 26px;
-  line-height: 29px;
+  line-height: 40px;
   color: $color-sapphire;
+
+  @include vp-1199 {
+    margin-bottom: 10px;
+
+    line-height: 29px;
+  }
+  @include vp-767 {
+    font-size: 22px;
+    line-height: 24px;
+  }
 }
 
 .card__item small {
@@ -36,26 +114,35 @@
 
   font-size: 16px;
   color: $color-chambray;
+
+  @include vp-767 {
+    margin-bottom: 47px;
+  }
 }
 
 .card__item p {
   position: relative;
   z-index: 2;
 
+  display: inline;
   margin: 0;
-  margin-bottom: 59px;
-  padding-left: 20px;
+  //padding-left: 20px;
 
   font-weight: 700;
   font-size: 60px;
   line-height: 90px;
   color: $color-egyptian-blue;
 
+  @include vp-767 {
+    font-size: 48px;
+    line-height: 72px;
+  }
+
   &:before {
     content: attr(data-shadow);
     position: absolute;
-    top: -53px;
-    left: 3px;
+    top: -63px;
+    left: -15px;
     z-index: -1;
 
     font-weight: 700;
@@ -64,6 +151,13 @@
     color: $color-whisper;
 
     opacity: 0.48;
+
+    @include vp-767 {
+      top: -50px;
+
+      font-size: 80px;
+      line-height: 120px;
+    }
   }
 }
 
@@ -72,4 +166,17 @@
   font-size: 60px;
   font-family: $ff-rouble;
   color: $color-sapphire;
+
+  @include vp-767 {
+    font-size: 48px;
+  }
+}
+
+.card__item a {
+  width: 206px;
+  margin: 33px auto 0;
+
+  @include vp-767 {
+    margin: 29px auto 0;
+  }
 }
