--- a/source/sass/blocks/subscription.scss
+++ b/source/sass/blocks/subscription.scss
@@ -1,17 +1,90 @@
 .subscription {
+  position: relative;
+  z-index: 1;
+
   padding: 120px 0;
 
   background-color: $color-ghost-white;
+
+  @include vp-1199 {
+    padding: 100px 0;
+  }
+  @include vp-767 {
+    padding: 68px 0;
+  }
 }
 
 .subscription .title {
-  margin-bottom: 33px;
+  margin-bottom: 17px;
 
   text-align: center;
+
+  @include vp-1199 {
+    margin-bottom: 13px;
+  }
+  @include vp-767 {
+    margin-bottom: 2px;
+  }
 }
 
 .subscription__tabs {
   display: flex;
   justify-content: center;
   margin-bottom: 39px;
+
+  @include vp-1199 {
+    margin-bottom: 50px;
+  }
+  @include vp-767 {
+    margin-bottom: 34px;
+  }
+}
+
+.subscription__tabs,
+.subscription ul {
+  @include vp-1199 {
+    padding: 0 118px;
+  }
+  @include vp-767 {
+    padding: 0 0;
+  }
+}
+
+.subscription ul:first-child {
+  @include vp-1199 {
+    padding: 0;
+  }
+}
+
+.subscription__image {
+  position: absolute;
+  right: 0;
+  bottom: -95px;
+  z-index: 2;
+
+  width: 245px;
+  height: 385px;
+  overflow: hidden;
+
+  @include vp-1199 {
+    bottom: -55px;
+
+    width: 388px;
+    height: 300px;
+  }
+  @include vp-767 {
+    display: none;
+  }
+}
+
+.subscription__image img {
+  width: 100%;
+  height: 100%;
+
+  @include vp-1199 {
+    object-fit: cover;
+    object-position: 43px;
+  }
+  object-fit: none;
+  object-position: -42px;
 }
