--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -32,6 +32,7 @@
 @import "blocks/subscription";
 @import "blocks/tabs";
 @import "blocks/card";
+@import "blocks/promo";
 @import "blocks/footer-nav";
 @import "blocks/social-link";
 
