--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -1,23 +1,47 @@
 .promo {
   padding: 120px 0;
+
+  @include vp-1199 {
+    padding: 100px 0;
+  }
+  @include vp-767 {
+    padding: 70px 0;
+  }
 }
 
 .promo__wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  @include vp-767 {
+    flex-direction: column;
+  }
 }
 
 .promo__description {
   display: grid;
   flex-grow: 1;
   align-self: stretch;
+  max-width: 500px;
   padding: 87px 78px;
 
   background-color: $color-torch-red;
 
   grid-template-columns: 2fr 1fr;
   grid-template-rows: repeat(4, min-content);
+  @include vp-1199 {
+    align-content: center;
+    min-width: 292px;
+    padding: 51px 45px 47px;
+  }
+  @include vp-767 {
+    align-self: center;
+    width: 100%;
+    min-width: 290px;
+    max-width: 678px;
+    padding: 50px 44px;
+  }
 }
 
 .promo__description h4,
@@ -32,17 +56,73 @@
 }
 
 .promo__description h3 {
+  margin-right: 50px;
+
   grid-row: span 2;
+  @include vp-1199 {
+    margin-right: 30px;
+  }
 }
 
 .promo__description > p {
-  margin-bottom: 55px;
+  margin-top: 7px;
+  margin-bottom: 42px;
 
   grid-column: 1/3;
+  @include vp-1199 {
+    margin-top: 0;
+    margin-bottom: 30px;
+  }
+}
+
+.promo__description > a {
+  padding: 25px 0;
+
+  @include vp-1199 {
+    padding: 13px 0;
+
+    font-size: 10px;
+    line-height: 12px;
+    letter-spacing: 0.05em;
+
+    border: 2px solid;
+  }
 }
 
 .promo__data {
   width: 64px;
+
+  @include vp-1199 {
+    width: 42px;
+  }
+}
+
+.promo__data h4 {
+  margin-top: -3px;
+  padding-bottom: 3px;
+
+  @include vp-1199 {
+    margin-top: -2px;
+    padding-bottom: 1px;
+  }
+}
+
+.promo__time h4 {
+  margin-top: 1px;
+  padding-bottom: 4px;
+
+  @include vp-1199 {
+    margin-top: 0;
+    padding-bottom: 0;
+  }
+}
+
+.promo__time p {
+  margin-top: -7px;
+
+  @include vp-1199 {
+    margin-top: 0;
+  }
 }
 
 .promo__data h4,
@@ -52,7 +132,10 @@
 
 .promo__time {
   width: 92px;
-  margin-bottom: 10px;
+
+  @include vp-1199 {
+    width: 56px;
+  }
 }
 
 .promo__description a {
@@ -67,12 +150,25 @@
   font-family: $ff-bebas;
   color: $color-default-white;
   letter-spacing: 0.03em;
+
+  @include vp-1199 {
+    font-size: 52px;
+    line-height: 52px;
+  }
+  @include vp-767 {
+    max-width: 130px;
+  }
 }
 
 .promo__data-number {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-top: -5px;
+
+  @include vp-1199 {
+    margin-top: 0;
+  }
 }
 
 .promo__description h4,
@@ -89,6 +185,11 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 27px;
+
+  @include vp-1199 {
+    font-size: 12px;
+    line-height: 18px;
+  }
 }
 
 .promo__data-number p,
@@ -96,14 +197,55 @@
   font-weight: 700;
   font-size: 40px;
   line-height: 60px;
+
+  @include vp-1199 {
+    font-size: 24px;
+    line-height: 30px;
+  }
 }
 
 .promo__month-year p {
+  margin-top: -3px;
+
   font-weight: 400;
   font-size: 14px;
   line-height: 21px;
+
+  @include vp-1199 {
+    font-size: 10px;
+    line-height: 15px;
+  }
 }
 
 .promo__image {
-  flex-shrink: 0;
+  align-self: stretch;
+  min-width: 600px;
+  max-width: 660px;
+  overflow: hidden;
+
+  @include vp-1199 {
+    min-width: 386px;
+    height: auto;
+    min-height: 292px;
+  }
+  @include vp-767 {
+    align-self: center;
+    width: 100%;
+    min-width: 290px;
+    max-width: 678px;
+    height: 292px;
+  }
+}
+
+.promo__image img {
+  width: 100%;
+  height: 100%;
+
+  @include vp-1199 {
+    height: auto;
+  }
+  @include vp-767 {
+    height: 120%;
+  }
+  object-fit: cover;
 }
