--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -17,6 +17,7 @@
 @import "global/title";
 @import "global/header";
 @import "global/logo";
+@import "global/slider";
 @import "global/footer";
 
 // Blocks
@@ -28,11 +29,11 @@
 @import "blocks/main-screen";
 @import "blocks/main-nav";
 @import "blocks/gym";
-@import "blocks/slider-mentor";
 @import "blocks/subscription";
 @import "blocks/tabs";
 @import "blocks/card";
 @import "blocks/promo";
+@import "blocks/coaches";
 @import "blocks/footer-nav";
 @import "blocks/social-link";
 
