ADD: starting section advantages

--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -15,6 +15,7 @@ $color-torch-red: #ff1553;
 $color-crimson: #d10a42;
 $color-dark-cerulean: #003d85;
 $color-venetian-red: #b80027;
+$color-crimson-transparent-20: rgba(209, 10, 66, 0.2);
 $color-sapphire: #102654;
 $color-sapphire-transparent-50: rgba(16, 38, 84, 0.5);
 $color-sapphire-transparent-89: rgba(16, 38, 84, 0.89);
