--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -34,6 +34,7 @@
 @import "blocks/card";
 @import "blocks/promo";
 @import "blocks/coaches";
+@import "blocks/advantages";
 @import "blocks/footer-nav";
 @import "blocks/social-link";
 
