--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -2,6 +2,13 @@
   padding: 120px 0;
 
   background-color: $color-ghost-white;
+
+  @include vp-1199 {
+    padding: 100px 0;
+  }
+  @include vp-767 {
+    padding: 69px 0;
+  }
 }
 
 .advantages__wrapper {
@@ -17,9 +24,13 @@
 }
 
 .advantages h2 {
-  margin-bottom: 80px;
+  margin-bottom: 67px;
 
   text-align: center;
+
+  @include vp-1199 {
+    margin-bottom: 50px;
+  }
 }
 
 .advantages__list {
@@ -37,9 +48,9 @@
   @include vp-1199 {
     min-width: 678px;
 
-    gap: 0 0;
-    grid-template-columns: 301px 1fr 315px;
-    grid-template-rows: 1fr 2fr 1fr;
+    gap: 43px 0;
+    grid-template-columns: 310px 44px 324px;
+    grid-template-rows: 1fr min-content 1fr;
   }
   @include vp-767 {
     display: flex;
@@ -59,7 +70,8 @@
 
   @include vp-767 {
     flex-direction: column;
-    margin-bottom: 50px;
+    width: 245px;
+    margin-bottom: -8px;
 
     &:last-child {
       margin-bottom: 0;
@@ -72,6 +84,10 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
+
+    @include vp-767 {
+      margin-bottom: 7px;
+    }
   }
 
   &-text {
@@ -94,18 +110,26 @@
 
   &--center {
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    text-align: center;
+    color: $color-default-white;
+
+    background-color: $color-resolution-blue;
 
     grid-column: 2/3;
     grid-row: span 2;
     @include vp-1199 {
-      width: 442px;
       margin: 0 auto;
+      padding: 32px 135px;
 
       grid-column: span 3;
       grid-row: 2/3;
     }
     @include vp-767 {
       width: 100%;
+      padding: 35px 0;
     }
   }
 
@@ -143,9 +167,15 @@
 
     @include vp-767 {
       align-items: center;
+      margin-top: 7px;
+      margin-bottom: 0;
+
+      & .advantages__item-number {
+        margin-bottom: 1px;
+      }
     }
   }
-
+  /*
   &--center {
     justify-content: center;
     align-items: center;
@@ -154,19 +184,61 @@
     color: $color-default-white;
 
     background-color: $color-resolution-blue;
-  }
+  }*/
 
   &--center > .advantages__item-number--center {
     align-items: center;
+  }
+
+  &--square {
+    padding-left: 27px;
+
+    @include vp-1199 {
+      padding-left: 0;
+    }
+  }
+
+  &--comfort {
+    padding-left: 20px;
+
+    @include vp-1199 {
+      padding-left: 0;
+    }
+  }
+
+  &--square > .advantages__item-number,
+  &--square > .advantages__item-text,
+  &--parking > .advantages__item-number,
+  &--parking > .advantages__item-text {
+    margin-top: -8px;
+
+    @include vp-767 {
+      margin-top: -5px;
+    }
+  }
+
+  &--comfort > .advantages__item-number,
+  &--comfort > .advantages__item-text,
+  &--experience > .advantages__item-number,
+  &--experience > .advantages__item-text {
+    margin-bottom: -8px;
   }
 }
 
 .advantages__item h3 {
   margin: 0;
+  margin-bottom: 10px;
 
   font-weight: 700;
   font-size: 22px;
   line-height: 33px;
+
+  @include vp-1199 {
+    margin-bottom: 2px;
+
+    font-size: 20px;
+    line-height: 30px;
+  }
 }
 
 .advantages__item p {
@@ -175,6 +247,11 @@
   font-weight: 300;
   line-height: 22px;
 
+  @include vp-1199 {
+    & br {
+      display: none;
+    }
+  }
   @include vp-767 {
     text-align: center;
   }
@@ -194,21 +271,26 @@
   }
 }
 
-.advantages__item-text h3 {
-  margin-bottom: 10px;
-}
-
 .advantages__item-text--center  p {
   font-weight: 400;
   line-height: 24px;
+
+  @include vp-1199 {
+    width: 172px;
+  }
 }
 
 .advantages__item-number--center {
   margin-right: 0;
-  margin-bottom: 50px;
+  margin-bottom: 35px;
 
   font-weight: 700;
   color: $color-default-white;
+
+  @include vp-1199 {
+    margin-bottom: 18px;
+  }
+
   & > p {
     font-weight: 700;
     font-size: 74px;
@@ -218,6 +300,11 @@
   & > span {
     font-size: 26px;
     line-height: 39px;
+
+    @include vp-1199 {
+      font-size: 22px;
+      line-height: 33px;
+    }
   }
 }
 
@@ -231,8 +318,11 @@
     -webkit-background-clip: text;
             background-clip: text;
 
+    @include vp-1199 {
+      font-size: 58px;
+      line-height: 56px;
+    }
     -webkit-text-fill-color: transparent;
-            text-fill-color: transparent;
   }
 }
 
@@ -242,5 +332,4 @@
           background-clip: text;
 
   -webkit-text-fill-color: transparent;
-          text-fill-color: transparent;
 }
