--- a/source/sass/blocks/coaches.scss
+++ b/source/sass/blocks/coaches.scss
@@ -1,5 +1,12 @@
 .coaches {
   padding-bottom: 120px;
+
+  @include vp-1199 {
+    padding-bottom: 100px;
+  }
+  @include vp-767 {
+    padding-bottom: 70px;
+  }
 }
 
 .coaches h2 {
@@ -122,22 +129,30 @@
   position: relative;
 
   margin-bottom: 13px;
-  padding-left: 25px;
+  padding-left: 35px;
 
   font-size: 14px;
   line-height: 21px;
   text-align: left;
 
+  @include vp-767 {
+    padding-left: 25px;
+  }
+
   &:before {
     content: "";
     position: absolute;
     top: 7px;
-    left: 10px;
+    left: 19px;
 
     width: 6px;
     height: 6px;
 
     background-color: $color-default-white;
     border-radius: 50%;
+
+    @include vp-767 {
+      left: 10px;
+    }
   }
 }
