--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -35,6 +35,7 @@
 @import "blocks/promo";
 @import "blocks/coaches";
 @import "blocks/advantages";
+@import "blocks/stocks";
 @import "blocks/footer-nav";
 @import "blocks/social-link";
 
