--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -36,6 +36,7 @@
 @import "blocks/coaches";
 @import "blocks/advantages";
 @import "blocks/stocks";
+@import "blocks/feedback";
 @import "blocks/footer-nav";
 @import "blocks/social-link";
 
