--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -1,7 +1,135 @@
 .feedback {
   padding-bottom: 120px;
+
+  @include vp-1199 {
+    padding-bottom: 100px;
+  }
+  @include vp-767 {
+    padding-bottom: 71px;
+  }
 }
 
 .feedback h2 {
+  margin-bottom: 52px;
+
   text-align: center;
+
+  @include vp-1199 {
+    margin-bottom: 42px;
+  }
+}
+
+.feedback .slider {
+  width: 560px;
+  height: 242px;
+
+  @include vp-1199 {
+    width: 566px;
+  }
+  @include vp-767 {
+    width: 226px; // или 78%
+    height: 335px;
+  }
+}
+
+.feedback .swiper-slide {
+  box-shadow: $shadow-feedback;
+}
+
+.feedback__slide {
+  width: 100%;
+  height: 100%;
+  padding: 53px 62px 40px;
+
+  background-color: $color-resolution-blue;
+
+  @include vp-1199 {
+    padding: 53px 65px 40px;
+  }
+  @include vp-767 {
+    padding: 35px 25px;
+    padding-top: 42px;
+  }
+}
+
+.feedback__slide-wrapper {
+  display: grid;
+  width: 100%;
+  height: 155px;
+  overflow-y: auto;
+
+  gap: 13px 28px;
+  grid-template-columns: repeat(), minmax(min-content, 2fr);
+  grid-template-rows: repeat(2, min-content);
+  @include vp-767 {
+    height: 260px;
+
+    gap: 15px 15px;
+  }
+}
+
+.feedback__slide-image {
+  width: 80px;
+  height: 80px;
+  margin-top: 8px;
+  overflow: hidden;
+
+  border-radius: 50%;
+
+  grid-column: 1/2;
+  grid-row: span 2;
+  @include vp-767 {
+    width: 68px;
+    height: 68px;
+    margin-top: 0;
+    margin-left: 10px;
+
+    grid-row: 1/2;
+    justify-self: center;;
+  }
+}
+
+.feedback__slide-image img {
+  width: 100%;
+
+  object-fit: cover;
+}
+
+.feedback__slide-text {
+  order: 2;
+}
+
+.feedback__slide {
+  & h3,
+  & p {
+    margin: 0;
+
+    color: $color-default-white;
+
+    grid-column: 2/3;
+  }
+
+  & h3 {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 30px;
+
+    grid-row: 1/2;
+    @include vp-767 {
+      margin: 9px 8px 0 0;
+
+      line-height: 25px;
+    }
+  }
+
+  & p {
+    line-height: 22px;
+
+    grid-row: 2/3;
+    @include vp-767 {
+      text-align: center;
+
+      grid-column: 1/3;
+    }
+  }
 }
