--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -37,6 +37,7 @@
 @import "blocks/advantages";
 @import "blocks/stocks";
 @import "blocks/feedback";
+@import "blocks/contacts";
 @import "blocks/footer-nav";
 @import "blocks/social-link";
 
