--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -38,6 +38,7 @@
 @import "blocks/stocks";
 @import "blocks/feedback";
 @import "blocks/contacts";
+@import "blocks/error";
 @import "blocks/footer-nav";
 @import "blocks/social-link";
 
