--- a/source/sass/blocks/card.scss
+++ b/source/sass/blocks/card.scss
@@ -12,7 +12,7 @@
   }
 }
 
-.card__list {
+.card--list {
   margin: 0;
   padding: 0;
 
@@ -126,7 +126,6 @@
 
   display: inline;
   margin: 0;
-  //padding-left: 20px;
 
   font-weight: 700;
   font-size: 60px;
