--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -20,8 +20,11 @@
 }
 
 .feedback .slider {
+  position: relative;
+
   width: 560px;
   height: 242px;
+  margin: 0 auto;
 
   @include vp-1199 {
     width: 566px;
