--- a/source/sass/global/title.scss
+++ b/source/sass/global/title.scss
@@ -1,19 +1,21 @@
-.title__section {
-  margin: 0;
-  padding: 0;
+.title {
+  &--section {
+    margin: 0;
+    padding: 0;
 
-  font-weight: 700;
-  font-size: 49px;
-  line-height: 49px;
-  font-family: "Bebas Neue";
-  letter-spacing: 0.03em;
+    font-weight: 700;
+    font-size: 49px;
+    line-height: 49px;
+    font-family: "Bebas Neue";
+    letter-spacing: 0.03em;
 
-  @include vp-1199 {
-    font-size: 42px;
-    line-height: 42px;
-  }
-  @include vp-767 {
-    font-size: 32px;
-    line-height: 32px;
+    @include vp-1199 {
+      font-size: 42px;
+      line-height: 42px;
+    }
+    @include vp-767 {
+      font-size: 32px;
+      line-height: 32px;
+    }
   }
 }
