FIX: stylelint and editorconfig

--- a/source/sass/blocks/card.scss
+++ b/source/sass/blocks/card.scss
@@ -137,7 +137,7 @@
     line-height: 72px;
   }
 
-  &:before {
+  &::before {
     content: attr(data-shadow);
     position: absolute;
     top: -63px;
