--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -98,11 +98,6 @@
     }
   }
 
-  &--square {
-    grid-column: 1/2;
-    grid-row: 1/2;
-  }
-
   &--parking {
     grid-column: 3/4;
     grid-row: 1/2;
@@ -130,14 +125,6 @@
     @include vp-767 {
       width: 100%;
       padding: 35px 0;
-    }
-  }
-
-  &--comfort {
-    grid-column: 1/2;
-    grid-row: 2/3;
-    @include vp-1199 {
-      grid-row: 3/4;
     }
   }
 
@@ -183,6 +170,8 @@
   &--square {
     padding-left: 27px;
 
+    grid-column: 1/2;
+    grid-row: 1/2;
     @include vp-1199 {
       padding-left: 0;
     }
@@ -191,8 +180,12 @@
   &--comfort {
     padding-left: 20px;
 
+    grid-column: 1/2;
+    grid-row: 2/3;
     @include vp-1199 {
       padding-left: 0;
+
+      grid-row: 3/4;
     }
   }
 
@@ -259,9 +252,17 @@
     align-items: center;
     margin-right: 0;
   }
+
+  &--900 {
+    margin-right: 0;
+
+    @include vp-767 {
+      margin-bottom: 0;
+    }
+  }
 }
 
-.advantages__item-text--center  p {
+.advantages__item-text--center p {
   font-weight: 400;
   line-height: 24px;
 
@@ -298,28 +299,22 @@
   }
 }
 
-.advantages__item-number {
-  & span:first-child {
-    font-weight: 700;
-    font-size: 71px;
-    line-height: 68px;
+.advantages__item-number span:first-child {
+  font-weight: 700;
+  font-size: 71px;
+  line-height: 68px;
 
-    background: $gradient-border;
-    -webkit-background-clip: text;
-            background-clip: text;
+  background: $gradient-border;
+  background-clip: text;
 
-    @include vp-1199 {
-      font-size: 58px;
-      line-height: 56px;
-    }
-    -webkit-text-fill-color: transparent;
+  @include vp-1199 {
+    font-size: 58px;
+    line-height: 56px;
   }
+  -webkit-text-fill-color: transparent;
 }
 
 .advantages__item:first-child > .advantages__item-number > span:first-child {
   background: $gradient-text;
-  -webkit-background-clip: text;
-          background-clip: text;
-
-  -webkit-text-fill-color: transparent;
+  background-clip: text;
 }
