--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -53,6 +53,39 @@
     padding: 35px 25px;
     padding-top: 42px;
   }
+
+  & h3,
+  & p {
+    margin: 0;
+
+    color: $color-default-white;
+
+    grid-column: 2/3;
+  }
+
+  & h3 {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 30px;
+
+    grid-row: 1/2;
+    @include vp-767 {
+      margin: 9px 8px 0 0;
+
+      line-height: 25px;
+    }
+  }
+
+  & p {
+    line-height: 22px;
+
+    grid-row: 2/3;
+    @include vp-767 {
+      text-align: center;
+
+      grid-column: 1/3;
+    }
+  }
 }
 
 .feedback__slide-wrapper {
@@ -88,7 +121,7 @@
     margin-left: 10px;
 
     grid-row: 1/2;
-    justify-self: center;;
+    justify-self: center;
   }
 }
 
@@ -100,39 +133,4 @@
 
 .feedback__slide-text {
   order: 2;
-}
-
-.feedback__slide {
-  & h3,
-  & p {
-    margin: 0;
-
-    color: $color-default-white;
-
-    grid-column: 2/3;
-  }
-
-  & h3 {
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 30px;
-
-    grid-row: 1/2;
-    @include vp-767 {
-      margin: 9px 8px 0 0;
-
-      line-height: 25px;
-    }
-  }
-
-  & p {
-    line-height: 22px;
-
-    grid-row: 2/3;
-    @include vp-767 {
-      text-align: center;
-
-      grid-column: 1/3;
-    }
-  }
 }
