--- a/source/sass/blocks/main-screen.scss
+++ b/source/sass/blocks/main-screen.scss
@@ -38,7 +38,6 @@
   @include vp-767 {
     margin-right: 0;
     margin-bottom: 29px;
-    //grid-template-columns: minmax(120px, 1fr) repeat(2, 3fr);
 
     grid-template-columns: 108px 91.5px 91.5px;
     grid-template-rows: 40px 81px minmax(51px, auto) 103px;
@@ -80,22 +79,7 @@
   font-weight: 700;
   font-size: 109px;
   line-height: 109px;
-  text-shadow: -0   -1px 0   $color-default-white,
-  0   -1px 0   $color-default-white,
-  -0    1px 0   $color-default-white,
-  0    1px 0   $color-default-white,
-  -1px -0   0   $color-default-white,
-  1px -0   0   $color-default-white,
-  -1px  0   0   $color-default-white,
-  1px  0   0   $color-default-white,
-  -1px -1px 0   $color-default-white,
-  1px -1px 0   $color-default-white,
-  -1px  1px 0   $color-default-white,
-  1px  1px 0   $color-default-white,
-  -1px -1px 0   $color-default-white,
-  1px -1px 0   $color-default-white,
-  -1px  1px 0   $color-default-white,
-  1px  1px 0   $color-default-white;
+  text-shadow: -0 -1px 0 $color-default-white, 0 -1px 0 $color-default-white, -0 1px 0 $color-default-white, 0 1px 0 $color-default-white, -1px -0 0 $color-default-white, 1px -0 0 $color-default-white, -1px 0 0 $color-default-white, 1px 0 0 $color-default-white, -1px -1px 0 $color-default-white, 1px -1px 0 $color-default-white, -1px 1px 0 $color-default-white, 1px 1px 0 $color-default-white, -1px -1px 0 $color-default-white, 1px -1px 0 $color-default-white, -1px  1px 0 $color-default-white, 1px  1px 0 $color-default-white;
 
   grid-column: 1/-1;
   grid-row: 2/4;
