--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -1,11 +1,10 @@
- @font-face {
+@font-face {
   font-style: normal;
   font-weight: 400;
   font-family: "Rouble";
 
   font-display: swap;
-  src: url("../fonts/rouble.woff2") format("woff2"),
-  url("../fonts/rouble.woff") format("woff");
+  src: url("../fonts/rouble.woff2") format("woff2"), url("../fonts/rouble.woff") format("woff");
 }
 
 @font-face {
@@ -14,8 +13,7 @@
   font-family: "Bebas Neue";
 
   font-display: swap;
-  src: url("../fonts/bebas-neue-bold.woff2") format("woff2"),
-  url("../fonts/bebas-neue-bold.woff") format("woff");
+  src: url("../fonts/bebas-neue-bold.woff2") format("woff2"), url("../fonts/bebas-neue-bold.woff") format("woff");
 }
 
 @font-face {
@@ -24,8 +22,7 @@
   font-family: "Bebas Neue";
 
   font-display: swap;
-  src: url("../fonts/bebas-neue-regular.woff2") format("woff2"),
-  url("../fonts/bebas-neue-regular.woff") format("woff");
+  src: url("../fonts/bebas-neue-regular.woff2") format("woff2"), url("../fonts/bebas-neue-regular.woff") format("woff");
 }
 
 @font-face {
@@ -34,8 +31,7 @@
   font-family: "Roboto Condensed";
 
   font-display: swap;
-  src: url("../fonts/roboto-condensed-bold.woff2") format("woff2"),
-  url("../fonts/roboto-condensed-bold.woff") format("woff");
+  src: url("../fonts/roboto-condensed-bold.woff2") format("woff2"), url("../fonts/roboto-condensed-bold.woff") format("woff");
 }
 
 @font-face {
@@ -44,8 +40,7 @@
   font-family: "Roboto Condensed";
 
   font-display: swap;
-  src: url("../fonts/roboto-condensed-regular.woff2") format("woff2"),
-  url("../fonts/roboto-condensed-regular.woff") format("woff");
+  src: url("../fonts/roboto-condensed-regular.woff2") format("woff2"), url("../fonts/roboto-condensed-regular.woff") format("woff");
 }
 
 @font-face {
@@ -54,6 +49,5 @@
   font-family: "Roboto Condensed";
 
   font-display: swap;
-  src: url("../fonts/roboto-condensed-light.woff2") format("woff2"),
-  url("../fonts/roboto-condensed-light.woff") format("woff");
+  src: url("../fonts/roboto-condensed-light.woff2") format("woff2"), url("../fonts/roboto-condensed-light.woff") format("woff");
 }
