--- a/source/sass/global/title.scss
+++ b/source/sass/global/title.scss
@@ -6,7 +6,7 @@
     font-weight: 700;
     font-size: 49px;
     line-height: 49px;
-    font-family: "Bebas Neue";
+    font-family: $ff-bebas;
     letter-spacing: 0.03em;
 
     @include vp-1199 {
