--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -23,15 +23,15 @@
   position: relative;
 
   width: 560px;
-  height: 242px;
+  //height: 242px;
   margin: 0 auto;
 
   @include vp-1199 {
     width: 566px;
   }
   @include vp-767 {
-    width: 226px; // или 78%
-    height: 335px;
+    width: 78%; // или 226px
+    //height: 335px;
   }
 }
 
@@ -70,7 +70,7 @@
 
     grid-row: 1/2;
     @include vp-767 {
-      margin: 9px 8px 0 0;
+      margin: 9px 0 0 0;
 
       line-height: 25px;
     }
@@ -91,15 +91,14 @@
 .feedback__slide-wrapper {
   display: grid;
   width: 100%;
-  height: 155px;
-  overflow-y: auto;
+  //height: 155px;
+  //overflow-y: auto;
 
   gap: 13px 28px;
   grid-template-columns: repeat(), minmax(min-content, 2fr);
   grid-template-rows: repeat(2, min-content);
   @include vp-767 {
-    height: 260px;
-
+    //height: 260px;
     gap: 15px 15px;
   }
 }
