--- a/source/sass/global/footer.scss
+++ b/source/sass/global/footer.scss
@@ -14,7 +14,7 @@
 .footer__wrapper {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
 
   @include vp-767 {
     flex-direction: column;
@@ -40,26 +40,47 @@
 .footer__social {
   flex-shrink: 0;
   align-self: flex-start;
+  width: 122px;
+
+  @include vp-767 {
+    width: 170px;
+  }
 }
 
 .footer__social ul {
+  /*
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
+  align-items: center;*/
+  display: grid;
   align-items: center;
   margin: 0;
   padding: 0;
 
   list-style: none;
+
+  gap: 25px;
+  grid-template-columns: repeat(auto-fit, 24px);
+  @include vp-1199 {
+    gap: 20px;
+  }
+  @include vp-767 {
+    gap: 35px;
+    grid-template-columns: repeat(auto-fit, 32px);
+  }
 }
 
 .footer__social li {
-  margin-right: 25px;
-
+  //margin-right: 25px;
   @include vp-1199 {
-    margin-right: 20px;
+    //margin-right: 20px;
   }
   @include vp-767 {
-    margin-right: 35px;
+    //margin-right: 35px;
+  }
+  & a {
+    width: 100%;
   }
 }
 
