--- a/source/sass/blocks/footer-nav.scss
+++ b/source/sass/blocks/footer-nav.scss
@@ -1,9 +1,12 @@
 .footer-nav {
+  width: 100%;
+  /*
   display: flex;
   justify-content: flex-start;
-  align-items: center;
+  align-items: center;*/
   max-width: 920px;
-  margin-left: 41px;
+  //margin-left: 41px;
+  margin-right: 41px;
 
   @include vp-767 {
     align-items: flex-end;
@@ -14,19 +17,26 @@
 }
 
 .footer-nav__list {
+  /*
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  align-self: flex-start;
+  align-self: flex-start;*/
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
   margin: 0;
-  margin-right: 40px;
+  //margin-right: 40px;
   padding: 0;
 
   list-style: none;
 
+  gap: 40px;
+  grid-template-columns: repeat(auto-fit, minmax(38px, min-content));
   @include vp-1199 {
-    margin-right: 30px;
+    //margin-right: 30px;
   }
   @include vp-767 {
     flex-direction: column;
@@ -37,7 +47,7 @@
   &--right {
     @include vp-767 {
       align-self: flex-start;
-      margin-right: 75px;
+      //margin-right: 75px;
       padding-top: 42px;
     }
   }
@@ -53,14 +63,13 @@
 }
 
 .footer-nav__item {
-  margin-right: 40px;
-
+  //margin-right: 40px;
   @include vp-1199 {
-    margin-right: 30px;
+    //margin-right: 30px;
   }
   @include vp-767 {
     margin-right: 0;
-    margin-bottom: 16px;
+    //margin-bottom: 16px;
   }
 }
 
